[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam="*"
image="*"
quasirandom="*"
lerp="*"
rand="*"
dyn-clone="1.0"
rayon="*"
indicatif={version = "*", features = ["rayon"]}
clap={ version = "3.2", features = ["derive"] }

[profile.release]
lto="thin"